[package]
name = "solana-event-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
time = { version = "0.3", features = ["serde", "formatting"] }

# Metrics & HTTP
axum = "0.7"
hyper = "1"
prometheus = "0.13"

# WebSocket
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures = "0.3"

[[bin]]
name = "solana-event-listener"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

